--- a/.github/workflows/UmZ0G0UGZlzQZvmCh.yml
+++ b/.github/workflows/UmZ0G0UGZlzQZvmCh.yml
@@ -1,8 +1,7 @@
 name: UEgnQ0U9ERrQovso3 
 
 on:
-  repository_dispatch :
-    types : [build]
+  workflow_dispatch :
 permissions: 
   actions: read
 
